--- a/JsSt/index.html
+++ b/JsSt/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="variable.js"></script> 
+    <script defer src="operation.js"></script> 
     <!-- 가장 좋은 방법 fetching을 먼저하고 html 뿌려주고 끝나고 html 을 보여줌-->
     <!-- <script asyn src="main.js"></script> 동시에 생성되지만 실행되는 과정에서 엉킬수 있음(?) -->
 </head>
